# andrewstephenfletcher.github.io

./: .gitignore  .nojekyll  404.html  CNAME  README.md  _quarto.yml  about.html  about.qmd  index.html  index.qmd  listings.json  main.py  posts.html  posts.xml  projects.html  pyproject.toml  references.bib  robots.txt  search.json  sitemap.xml  styles.css
blog/: index.html  index.qmd
blog/posts/residual-stream/: index.html  index.qmd  linear-probe.html  linear-probe.ipynb  linear-probe.py  logit-lens.html  logit-lens.ipynb  logit_lens_results.pkl  residual_stream_animation-preview.html  residual_stream_animation.html  residual_stream_animation.ipynb  residual_stream_animation.out.ipynb
blog/posts/test-post/: index.html  index.qmd
docs/: index.html  listings.json  people.html  publications.html  robots.txt  search.json  sitemap.xml  teaching.html
docs/blog/posts/residual-stream/: residual_stream_animation.html  residual_stream_animation.out.html
docs/posts/event-title/: index.html
docs/posts/news-title/: index.html
notebooks/: Branching model tutorial.html  hf.html
posts/event-title/: index.html
posts/news-title/: index.html
posts/paper-title/: index.html
projects/: how-well-can-llms-hide-their-thoughts.html  how-well-can-llms-hide-their-thoughts.qmd  index.html  index.qmd  safety-viz.html  safety-viz.qmd
site_libs/bootstrap/: bootstrap-d561462725f41d7d39e5dc27a8efc17c.min.css  bootstrap-e9107cd1d46477dfac17b7c00cc0fc18.min.css  bootstrap-ed7b9cc99f06e9b47f712dd9fcc9dedf.min.css
