[project]
name = "andrewstephenfletcher-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "cmasher>=1.9.2",
    "datasets>=4.5.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "manim>=0.19.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "transformers>=5.0.0",
]

[tool.uv]
managed = true
